<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultationActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/dados_medico"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#F3F3F3"
        android:columnCount="2"
        android:padding="20dp"
        android:rowCount="1"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:src="@drawable/docsm" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1"
            android:rowCount="3">

            <TextView
                android:id="@+id/nomemedico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/nomemedico" />

            <TextView
                android:id="@+id/crmmedico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/crm" />

            <TextView
                android:id="@+id/especialidademedico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/especialidade" />

        </GridLayout>
    </GridLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_button"
        android:onClick="solicitarConsulta"
        android:padding="15dp"
        android:text="@string/botaoconsulta"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaohora" />

    <TextView
        android:id="@+id/labelnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/labelnome"
        app:layout_constraintStart_toStartOf="@+id/nomePaciente"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nomePaciente"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/nome"
        android:inputType=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelnome" />

    <TextView
        android:id="@+id/labeltelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/labeltelefone"
        app:layout_constraintStart_toStartOf="@+id/telefonePaciente"
        app:layout_constraintTop_toBottomOf="@+id/nomePaciente" />

    <EditText
        android:id="@+id/telefonePaciente"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/telefone"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labeltelefone"
        android:maxLength="11" />


    <Button
        android:id="@+id/botaodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_button3"
        android:onClick="escolherData"
        android:padding="15dp"
        android:text="@string/botaodata"
        android:textColor="#A8A8A8"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/telefonePaciente"
        app:layout_constraintTop_toBottomOf="@+id/telefonePaciente" />


    <Button
        android:id="@+id/botaohora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/custom_button3"
        android:onClick="escolherHora"
        android:padding="15dp"
        android:text="@string/botaohora"
        android:textColor="#A8A8A8"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/telefonePaciente"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/botaodata"
        app:layout_constraintTop_toTopOf="@+id/botaodata" />


</android.support.constraint.ConstraintLayout>